--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons-kit": "^2.0.0",
     "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
