--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dhanekulayaswanth.github.io/kcpsiddhartha",
+  "homepage": "https://kcpsarpschool.org/resultpage/",
   "name": "samplelogin",
   "version": "0.1.0",
   "private": true,
